# opencv-hal-proposal

./: .gitignore  CMakeLists.txt  README.md  build_no_hal.sh  build_shared_hal.sh  build_static_hal.sh  core.hpp  gen_hal_wrappers.py  hal.cpp  hal.hpp  hal_impl.cpp  hal_interface.h  hal_user.cpp
hal_api/: CMakeLists.txt  hal_context.h  hal_impl_templ.h  hal_interface.h  hal_types.h
hal_impl/: CMakeLists.txt  hal_impl.cpp  hal_impl.h
opencv_module/: CMakeLists.txt  hal.cpp  hal.hpp  opencv_module.cpp  opencv_module.hpp  shared_library.cpp  shared_library.hpp
opencv_user/: CMakeLists.txt  opencv_user.cpp
scripts/: gen_hal_wrappers.py
